k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
